# bt

./: Cargo.toml  README.md
data/: bitcoin_historical_data.csv
src/: main.rs
src/backtester/: mod.rs
src/data_loader/: mod.rs  types.rs
src/report/: metrics.rs  mod.rs  plots.rs
src/strategy/: indicators.rs  mod.rs  process_strategy.rs
